turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:8: error: forward reference extends over definition of variable color
  System.out.println(index)
                     ^Turmite:8: error: forward reference extends over definition of variable index
  System.out.println(index)
                     ^